2011-02-10  Patrick Gansterer  <paroga@webkit.org>

Reviewed by Andreas Kling.

        Fix compilation error on OpenBSD
        https://bugs.webkit.org/show_bug.cgi?id=53766

        Add a HAVE_STRNSTR in Platform.h and define it only on Darwin and FreeBSD.

        * wtf/Platform.h:
        * wtf/StringExtras.h: Use HAVE(STRNSTR) now.

Canonical link: https://commits.webkit.org/68289@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78278 268f45cc-cd09-0410-ab3c-d52691b4dbfc